crates/compiler/tests/codegen_test/snapshots/integration_test__codegen_test__codegen-2.snap
---
source: crates/compiler/tests/codegen_test/mod.rs
assertion_line: 14
expression: "Hello {{world}}"
---
const _Vue = Vue

return function render(_ctx, _cache) {
  with (_ctx) {
    const {
      toDisplayString: _toDisplayString, 
    } = _Vue
    return "Hello " + _toDisplayString(world)
  }
}
