crates/compiler/tests/codegen_test/snapshots/integration_test__codegen_test__codegen.snap
---
source: crates/compiler/tests/codegen_test/mod.rs
assertion_line: 14
expression: Hello world
---

return function render(_ctx, _cache) {
  with (_ctx) {
    return "Hello world"
  }
}
