crates/compiler/tests/codegen_test/snapshots/integration_test__codegen_test__text_codegen.snap
---
source: crates/compiler/tests/codegen_test/mod.rs
assertion_line: 35
expression: Hello world
---

return function render(_ctx, _cache) {
  with (_ctx) {
    return "Hello world"
  }
}
